apps/infrastructure/configs/argocd/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  entryPoints:
    - websec-int
  routes:
    - match: Host(`argocd.internal.starktastic.net`)
      kind: Rule
      services:
        - name: argocd-server
          port: 443
          scheme: https
          serversTransport: argocd-transport
  tls:
    secretName: argocd-server-tls
