apps/infrastructure/configs/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: https
    traefik.ingress.kubernetes.io/service.serverstransport: argocd-transport@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: argocd.internal.starktastic.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  name: https
  tls:
    - hosts:
        - argocd.internal.starktastic.net
      secretName: argocd-server-tls
